# ai-sdr-lora

./: CLAUDE.md  OVERVIEW.md  requirements.yaml  requirements_legacy.yaml
crates/r4w-cli/: Cargo.toml
crates/r4w-cli/src/: main.rs
crates/r4w-core/: Cargo.toml
crates/r4w-core/src/: lib.rs
crates/r4w-core/src/analysis/: mod.rs  peaks.rs  spectrum.rs  statistics.rs  waterfall.rs
crates/r4w-core/src/mesh/: crypto.rs  lora_mesh.rs  mac.rs  meshtastic.rs  mod.rs  packet.rs  routing.rs  telemetry.rs
crates/r4w-core/src/mesh/wire/: header.rs  mod.rs
crates/r4w-sim/: Cargo.toml
crates/r4w-sim/examples/: gallery_generate.rs
crates/r4w-sim/src/: channel.rs  doppler.rs  lib.rs
docs/: ISOLATION_GUIDE.md
gallery/: README.md
notebooks/: 01_iq_basics.ipynb  02_modulation.ipynb  03_spectrum_analysis.ipynb  04_channel_effects.ipynb  05_lora_deep_dive.ipynb  06_ber_simulation.ipynb  07_waveform_comparison.ipynb  08_mesh_networking.ipynb  README.md  requirements.txt
notebooks/r4w_python/: __init__.py  cli.py  plotting.py
