[package]
name = "r4w-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "R4W - Rust for Waveforms CLI"
repository = "https://github.com/joemooney/r4w"
keywords = ["sdr", "waveform", "dsp", "radio", "signal-processing"]
categories = ["science", "command-line-utilities", "simulation"]

[[bin]]
name = "r4w"
path = "src/main.rs"

# cargo-binstall support
# Install with: cargo binstall r4w-cli
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-fmt = "tgz"

[dependencies]
r4w-core = { path = "../r4w-core" }
r4w-sim = { path = "../r4w-sim" }

clap.workspace = true
clap_complete = "4.5"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# File I/O for samples
byteorder = "1.5"

# Signal handling
ctrlc = "3.4"

# Random number generation for mesh simulation
rand = "0.8"

[features]
default = ["image"]
# Enable when hardware SDR support is ready
# hardware = ["sdr-sim/soapysdr"]
# Enable PNG image generation for waterfall/spectrum
image = ["r4w-core/image"]
